--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 alembic==1.0.1
+aniso8601==3.0.2
 Click==7.0
 Flask==1.0.2
 Flask-Login==0.4.1
+flask-marshmallow==0.9.0
 Flask-Migrate==2.3.0
+Flask-RESTful==0.3.6
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 ItsDangerous==1.0.0
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.16.1
 python-dateutil==2.7.3
 python-editor==1.0.3
+pytz==2018.6
 six==1.11.0
 SQLAlchemy==1.2.12
 Werkzeug==0.14.1
