--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,28 @@
-alembic==0.9.9
+alembic==1.0.1
+aniso8601==3.0.2
 atomicwrites==1.2.1
 attrs==18.2.0
-backcall==0.1.0
-bleach==3.0.2
-blinker==1.4
-click==6.7
-decorator==4.3.0
-defusedxml==0.5.0
-dominate==2.3.1
-ecdsa==0.13
-entrypoints==0.2.3
-esptool==2.5.1
+Click==7.0
 Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.2.1
+flask-marshmallow==0.9.0
+Flask-Migrate==2.3.0
+Flask-RESTful==0.3.6
 Flask-Script==2.0.6
-Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.3.2
-Flask-Uploads==0.2.1
-Flask-WTF==0.14.2
-gunicorn==19.8.1
-ipykernel==5.1.0
-ipython==7.0.1
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-itsdangerous==0.24
-jedi==0.13.1
+ItsDangerous==1.0.0
 Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==6.0.0
-jupyter-core==4.4.0
 Mako==1.0.7
-markdown2==2.3.5
 MarkupSafe==1.0
-mistune==0.8.4
+marshmallow==2.16.1
 more-itertools==4.3.0
-nbconvert==5.4.0
-nbformat==4.4.0
-notebook==5.7.0
-numpy==1.15.2
-pandocfilters==1.4.2
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.5
-pluggy==0.7.1
-prometheus-client==0.4.1
-prompt-toolkit==2.0.6
+pluggy==0.8.0
 psycopg2==2.7.5
-psycopg2-binary==2.7.5
-ptyprocess==0.6.0
-py==1.6.0
-pyaes==1.6.1
-PyAudio==0.2.11
-Pygments==2.2.0
-pyperclip==1.6.2
-PyQt5==5.11.3
-PyQt5-sip==4.19.13
-pyqtgraph==0.10.0
-pyserial==3.4
-pytest==3.8.1
+py==1.7.0
+pytest==3.9.2
 python-dateutil==2.7.3
 python-editor==1.0.3
-pyzmq==17.1.2
-qtconsole==4.4.2
-scipy==1.1.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
+pytz==2018.6
 six==1.11.0
-SQLAlchemy==1.2.8
-terminado==0.8.1
-testpath==0.4.2
-tornado==5.1.1
-traitlets==4.3.2
-visitor==0.1.3
-wcwidth==0.1.7
-webencodings==0.5.1
+SQLAlchemy==1.2.12
 Werkzeug==0.14.1
-widgetsnbextension==3.4.2
-WTForms==2.2.1
