--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
 marshmallow==2.16.1
+marshmallow-sqlalchemy==0.14.1
 more-itertools==4.3.0
 pluggy==0.8.0
 psycopg2==2.7.5
